@@ -1,8 +1,8 @@
 Package: modEvA
 Type: Package
 Title: Model Evaluation and Analysis
-Version: 3.29
-Date: 2025-02-14
+Version: 3.30
+Date: 2025-02-21
 Authors@R: c(person(given = c("A.", "Marcia"),
                       family = "Barbosa",
                       role = c("aut", "cre"),
@@ -42,7 +42,7 @@ LazyData: yes
 License: GPL-3
 URL: http://modeva.r-forge.r-project.org/
 NeedsCompilation: no
-Packaged: 2025-02-14 17:14:00 UTC; marcia
+Packaged: 2025-02-21 10:51:24 UTC; marcia
 Author: A. Marcia Barbosa [aut, cre],
   Jennifer A. Brown [aut],
   Alberto Jimenez-Valverde [aut],
@@ -55,4 +55,4 @@ Author: A. Marcia Barbosa [aut, cre],
   Jose Carlos Guerrero [fnd]
 Depends: R (>= 2.10)
 Repository: CRAN
-Date/Publication: 2025-02-17 00:20:02 UTC
+Date/Publication: 2025-02-21 13:10:02 UTC
