@@ -10,8 +10,8 @@ The modEvA package can analyse species distribution models and evaluate their pe
 \tabular{ll}{
 Package: \tab modEvA\cr
 Type: \tab Package\cr
-Version: \tab 3.29\cr
-Date: \tab 2025-02-14\cr
+Version: \tab 3.30\cr
+Date: \tab 2025-02-21\cr
 License: \tab GPL-3\cr
 }
 }
